# lesjardinsdudore

./: .gitignore  .gitmodules  CNAME  Makefile  asset-manifest.json  docker-compose.dev.yml  docker-compose.yml  index.html  manifest.json  package-lock.json  package.json
.github/actions/setup-uv-env/: action.yml
.github/workflows/: deploy.yml  test.yml
backend/: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.rst  STYLE_GUIDE.rst  log-config.dev.yaml  log-config.yaml  pyproject.toml
backend/lesjardinsdudore/: api.py  inventory.py
backend/lesjardinsdudore/testing/: compose.py  database.py  fixtures.py  ingestor.py  services.py
backend/scripts/: msgfmt.py
backend/tests/integration/: test_api.py  test_biodynamics.py  test_permaculture.py
backend/tests/unit/: conftest.py  test_api.py  test_http.py  test_inventory.py  test_locales.py
backend/tests/unit/testing/: test_ingestor.py
certbot/: generate-cert.sh
docs/: antoine-labelle.md
frontend/: Dockerfile  Makefile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/conf.d/: default.conf
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/Contribute/: style.ts
frontend/src/components/Footer/: style.ts
frontend/src/components/Hero/: style.ts
frontend/src/components/Info/: Data.ts  index.tsx
frontend/src/components/Lang/: index.tsx
frontend/src/images/: plan.xcf
frontend/src/pages/: Plantes.tsx  index.tsx
nginx/conf.d/templates/: sites-default.conf.j2
permaculture/: .gitignore  Dockerfile  Makefile  pyproject.toml
permaculture/lesjardinsdudore/permaculture/: ingestor.py
permaculture/tests/unit/: test_ingestor.py
samba/: Dockerfile  docker-entrypoint.sh  smb.conf
src/: App.tsx  i18n.ts  index.tsx
src/components/Button/: style.ts
src/components/Contribute/: index.tsx
src/components/Footer/: index.tsx
src/components/Hero/: HeroElements.ts  index.tsx
src/components/Info/: Data.ts  InfoElements.ts  index.tsx  style.ts
src/components/Lang/: config.ts  style.ts
src/components/Navbar/: NavbarElements.ts  index.tsx  style.ts
src/components/Sidebar/: SidebarElements.ts  index.tsx  style.ts
src/images/: dirt.xcf  logo.xcf  mnm.xcf  rene.xcf
src/pages/: index.tsx
static/css/: main.95ad5be9.css  main.95ad5be9.css.map
static/js/: main.57443076.js  main.57443076.js.map  main.763bf460.js  main.763bf460.js.map  main.932e0295.js  main.932e0295.js.map  main.b58b3a69.js  main.b58b3a69.js.map  main.d618abd0.js  main.d618abd0.js.map  main.d7a72687.js  main.d7a72687.js.map  main.f840c10f.js  main.f840c10f.js.map
unbound/: docker-entrypoint.sh
(+1 files in other folders)
